# opaiui

./: .gitignore  Makefile  README.md  SUGGESTED_QUESTIONS_FEATURE.md  pyproject.toml  scholar_app.py  semantic_scholar_mcp.py  test.py
assets/: Figures.key
src/opaiui/: __init__.py  app.py
